# GithubFetcher

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml  flakehub-publish-tagged.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs  models.rs
src/client/: mod.rs
src/server/: mod.rs
