[package]
name = "github-fetcher-mcp"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
rmcp = { version = "0.10", features = ["transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "github-fetcher-mcp"
path = "src/main.rs"
